App information written with js is received by api. The design of both is compiled in html and css

--- a/Detail.html
+++ b/Detail.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
-<html data-theme="light" lang="en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Nunito+Sans:ital@1&family=Open+Sans:ital,wght@1,300;1,400&family=Raleway:wght@100;200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./Style/detail.css">
     <title>Document</title>
+    <link rel="stylesheet" href="./Style/detail.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Nunito+Sans:wght@300;400;600;800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="Container">
-        <header class="head">
-            <div>
-                <h1>Where in the world?</h1>
+    <div class="detail" id="detail">
+        <div>
+            <button id="back" class="back"><i class="fa-solid fa-arrow-left-long"></i>
+                <span class="back__span">Back</span>
+            </button>
+            <div class="detail__div" id="detailDiv">
+               
             </div>
-            <div>
-                <button type="button" id="i" style="border-style:none"><i  class="fa-solid fa-moon"> Dark Mode</i></button>
-            </div>
-        </header>
-        <div class="back">
-
-            <i class="fa-solid fa-arrow-left"></i>
-            <a class="back-a" href="Index.html" style="text-decoration:none;">Back</a>
         </div>
-        <main id="main">
-
-
-
-        </main>
     </div>
-    <script src="./JS/Detail.js">
-    </script>
+
+
+    <script src="./JS/Detail.js"></script>
 </body>
 
 </html>
